# IEEE-754-float16

./: CMakeLists.txt  README.md
include/fp16/: float16.h  float16.hpp  fptypes.h  math.h
src/fp16/: float16.c  float32.h
src/fp16/math/: abs.c  acos.c  asin.c  atan.c  atan2.c  cbrt.c  ceil.c  cos.c  exp.c  exp10.c  exp2.c  floor.c  fma.c  hypot.c  ilogb.c  log.c  log10.c  log2.c  lrint.c  pow.c  rint.c  round.c  scalb.c  scalbn.c  significand.c  sin.c  sincos.c  sqrt.c  tan.c  trunc.c
